# QT-Chat

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  main.cpp  main_thread.hpp
Client/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
Client/Chat/: ChatConnection.cpp  ChatConnection.h
Client/Core/: Connection.cpp  Connection.h
Client/Static/: static.qrc
Client/Window/: AuthDialog.cpp  AuthDialog.h  AuthDialog.ui  ChatLabel.cpp  ChatLabel.h  ChatWindow.cpp  ChatWindow.h  ChatWindow.ui  MainWindow.ui
Server/: CMakeLists.txt  ChatListener.h  Client.cpp  Client.h  Config.cpp  Listener.cpp  Listener.h  MessageHandler.cpp  MessageHandler.h  main.cpp
Server/Chat/: ChatListener.cpp  ChatListener.h  ChatWebSocketListener.cpp  ChatWebSocketListener.h  StaticHttpListener.cpp  StaticHttpListener.h
Server/Core/: Client.cpp  Client.h  Config.cpp  Config.h  HttpListener.cpp  HttpListener.h  Listener.cpp  Listener.h  MessageHandler.cpp  MessageHandler.h  WebSocketListener.cpp  WebSocketListener.h
Server/Static/: chat.html  static.qrc
Web/: test.html
